<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mailtxter"
        android:layout_width="213dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="200dp"
        android:text="@string/ermail"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/entmailtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passtxter"
        android:layout_width="193dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/erpass"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="359dp" />

    <EditText
        android:id="@+id/entmailtxter"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginTop="284dp"
        android:ems="10"
        android:hint="@string/erhidmail"
        android:textColorHint="@android:color/white"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/entpasstxter"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/erhidpass"
        android:textColorHint="@android:color/white"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passtxter" />

    <Button
        android:id="@+id/bu_loginer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entpasstxt"
        app:layout_constraintVertical_bias="0.909"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:text="دخول"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="462dp" />

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="204dp"
        android:layout_height="133dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lgback" />

</android.support.constraint.ConstraintLayout>